--- a/ivy.xml
+++ b/ivy.xml
@@ -21,7 +21,7 @@
        xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <info
         organisation="introsde"
-        module="assignment-2"
+        module="lab06"
         status="integration">
 	</info>
 	
