--- a/build.xml
+++ b/build.xml
@@ -99,7 +99,7 @@
 		<echo message="${lib.dir} has been deleted" />
 	</target>
 
-	<target name="install" depends="clean, init, generate-stubs">
+	<target name="install" depends="clean, init"> <!-- generate-stubs" -->
 		<echo message="Compile target has been called" />
 		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="lib.path.id" includeAntRuntime="false">
 		</javac>
