--- a/build.xml
+++ b/build.xml
@@ -91,8 +91,8 @@
 		<echo message="Clean has been called" />
 		<delete dir="${build.dir}" />
 		<echo message="${build.dir} has been deleted" />
-		<delete dir="${src.dir}/introsde/finalproject/soap" />
-		<echo message="${src.dir}/introsde has been deleted" />
+	<!--	<delete dir="${src.dir}/introsde/finalproject/soap" />
+		<echo message="${src.dir}/introsde has been deleted" /> -->
 		<delete dir="${ivy.jar.dir}" />
 		<echo message="${ivy.jar.dir} has been deleted" />
 		<delete dir="${lib.dir}"/>
