--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
        # The target "download-ivy" and "install-ivy" will download the ivy jar and place it in the "ivy" folder
        # 
 -->
-<project name="StorageServices_introsde-2015-FinalProject" default="compile" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
+<project name="StorageServices_introsde-2015-FinalProject" default="install" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 
 	<!-- PART 1: Ivy properties, download, installation and configuration -->
 	<property name="ivy.install.version" value="2.4.0-rc1" />
